public/css/stylesheet2.css
body {
background: url('../img/background.png');
}

h2 {
	color: white;
	font-family: 'Quicksand', sans-serif;
	text-align: center;
	font-size: 5em;
}

p {
	color: white;
	font-family: 'Quicksand', sans-serif;
	font-size: 2em;
	text-align: center;
}

.container {
	background: url('../img/background.png');
	color: black;
	margin-top:;
	border-radius: 25px;
	height:40em;
}

.squareContainer {
	float: center;
	text-align: center;

}

h1 {
	font-family: 'Quicksand', sans-serif;
	color: white;
	font-size: 2em;
	text-align: center;
	float: center;
}

.squareContainer h1 {
	float: center;
}

.square {
	width: 200px;
	height: 200px;
	background-color: #3a5795;
	display: inline-block;
	margin: 3em;
	border-radius: 25px;
}

.square .text {
	visibility: hidden;

}

.square:hover .text{
	visibility: visible;
	overflow: auto;
}


.square:hover h1 {
	visibility: hidden;
}

.text {
	text-align: center;
	float: center;
}

